--- a/frontend/angular-react/css/app.css
+++ b/frontend/angular-react/css/app.css
@@ -26,6 +26,11 @@ body{
 	width: 150px; 
 	height: 150px;
 }
+.product_image_admin {
+	border: thin solid; 
+	width: 50px; 
+	height: 50px;
+}
 .product_description {
 	text-align: left;
 	font-size: 0.9em;
