--- a/template/css/our_project.css
+++ b/template/css/our_project.css
@@ -83,8 +83,9 @@ h2{
   background: #FE980F;
   border: 0 none;
   border-radius: 0;
-  color: #FFFFFF;
-  font-size: 16px;
+  color: #FFFFFF !important;
+  font-size: 15px !important;
+  width: auto !important;
   font-weight: 300;
   font-family: "Roboto",sans-serif;
   margin-bottom: 20px; 
@@ -422,6 +423,11 @@ h2{
 }
 .text-area {
     margin-top: 0 !important;
+}
+
+.replay-box form input{
+  margin-bottom: 10px !important;
+  padding: 5px !important;
 }
 
 /*
