--- a/template/index.html
+++ b/template/index.html
@@ -256,10 +256,13 @@
 							</div><!--/category-products-->
 							
 							<div class="price-range"><!--price-range-->
-								<h2>Price Range</h2>
+								<h2>Price</h2>
+								
 								<div class="well text-center">
 									 <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2" ><br />
+									 <!--
 									 <b class="pull-left">0 €</b> <b class="pull-right">600 €</b>
+									  -->
 								</div>
 							</div><!--/price-range-->
 							
@@ -908,15 +911,20 @@
 		</ul>
 	</section>
 
-    <script src="js/jquery.js"></script>
+
+	<script src="js/jquery.js"></script>
+	<!-- 
+    <script src="js/jquery-ui.min.js"></script>
+	-->
+    <script src="js/jquery-ui/jquery-ui.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.scrollUp.min.js"></script>
+    <script src="js/jquery-ui/jquery-ui.js"></script>
 	<script src="js/price-range.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/jquery-ui/jquery-ui.js"></script>
     <script src="js/main.js"></script>
 
- 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	
   	<!-- Jimmy Custom JS-->
     <script src="js/our_js.js"></script>
 </body>
